# trade-hunter

./: .cursorrules  .env.example  .gitattributes  .gitignore  .windsurfrules  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  EVAL_PREREGISTRATION.md  FINAL_SESSION_SUMMARY.md  GEMINI.md  HANDOFF.md  HISTORY.md  HOLISTIC.md  Makefile  README.md  ROADMAP.md  SESSION_SUMMARY.md  TUNING-RULESET-PLAN.md  USER_GUIDE.md  active.lnk  current_feeds.txt  design-proposal.html  fix_detector.py  integration_test_results.md  integration_test_results_sqlite.md  kalshi_message_schema.md  launcher.py  main.py  proposal_feeds.txt  pyproject.toml  score.py  signal_log.py  status.py  test_defensive_logging.py  test_kalshi_connection.py  trade-hunter  trade-hunter-ui-revision-checklist.md  trade-hunter.cmd  trade-hunter_dashboard_mockup.html  (+3 more)
.claude/: launch.json
.github/: copilot-instructions.md
.gsd/: PROJECT.md  REQUIREMENTS.md
.gsd.migrating/: COMPLETION_SUMMARY.md  DECISIONS.md  KNOWLEDGE.md  PROJECT.md  REQUIREMENTS.md  STATE.md  doctor-history.jsonl  event-log.jsonl  gsd.db-shm  gsd.db-wal  state-manifest.json
.holistic/: config.json  draft-handoff.json  state.json
.repo-report/: latest.html  latest.json  trade-hunter_2026-06-06_21-11-24.html  trade-hunter_2026-06-06_21-11-24.json  trade-hunter_2026-06-06_21-38-46.html  trade-hunter_2026-06-06_21-38-46.json  trade-hunter_2026-06-06_22-37-24.html  trade-hunter_2026-06-06_22-37-24.json  trade-hunter_2026-06-07_16-44-34.html  trade-hunter_2026-06-07_16-44-34.json  trade-hunter_2026-06-07_18-38-51.html  trade-hunter_2026-06-07_18-38-51.json  (+11 more)
(+163 files in other folders)
