[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trade-hunter"
version = "0.1.0"
description = "Local dashboard and spike detector for prediction-market signals."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
integrations = [
  "pykalshi>=1.0.1",
]

[project.scripts]
trade-hunter = "app.__main__:main"

[tool.setuptools]
include-package-data = true
